--- a/nc/noise_cancelling.qsf
+++ b/nc/noise_cancelling.qsf
@@ -52,10 +52,6 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name VHDL_FILE TickGenerator.vhd
-set_global_assignment -name VHDL_FILE ADCReader.vhd
-set_global_assignment -name VHDL_FILE DACWriter.vhd
-set_global_assignment -name VHDL_FILE main.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -entity ADC_DAC -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -entity ADC_DAC -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -entity ADC_DAC -section_id Top
@@ -245,5 +241,10 @@ set_location_assignment PIN_Y3 -to GPIO[33]
 set_location_assignment PIN_AB2 -to GPIO[34]
 set_location_assignment PIN_AA2 -to GPIO[35]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -entity ADC_DAC -section_id Top
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE bus/ApbBus.vhd
+set_global_assignment -name VHDL_FILE TickGenerator.vhd
+set_global_assignment -name VHDL_FILE ADCReader.vhd
+set_global_assignment -name VHDL_FILE DACWriter.vhd
+set_global_assignment -name VHDL_FILE main.vhd
 set_global_assignment -name QIP_FILE FIR_COEF_RAM.qip
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
